--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "fonts";
+@import "owl-carousel";
 
 body {
   margin: 0;
@@ -1372,6 +1373,7 @@ body {
   &--active {
     background-color: $lightBrown;
     background-image: url(../images/minus_sprite.svg);
+    transition: 0.3s;
 
     & svg {
       stroke: #fff;
@@ -1399,6 +1401,62 @@ body {
     padding: 35px 203px 35px 43px;
   }
 }
+
+.closed {
+  .vertical {
+    transition: all 0.5s ease-in-out;
+    transform: rotate(-90deg);
+  }
+  .horizontal {
+    transition: all 0.5s ease-in-out;
+    transform: rotate(-90deg);
+    opacity: 1;
+  }
+}
+
+.opened {
+  opacity: 1;
+  .vertical {
+    transition: all 0.5s ease-in-out;
+    opacity: 0;
+  }
+  .horizontal {
+    transition: all 0.5s ease-in-out;
+  }
+}
+
+.circle-plus {
+  height: 4em;
+  width: 4em;
+  font-size: 1em;
+  opacity: .7;
+}
+
+.circle-plus .circle {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.circle-plus .circle .horizontal {
+  position: absolute;
+  background-color: #544332;
+  width: 20px;
+  height: 2px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.circle-plus .circle .vertical {
+  position: absolute;
+  background-color: #544332;
+  width: 2px;
+  height: 20px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 
 .answer-block__answer {
   margin: 0 0 15px;
